correct top position, wrong height of events

--- a/frontend/src/components/Calendar/DayView/DayView.module.css
+++ b/frontend/src/components/Calendar/DayView/DayView.module.css
@@ -65,3 +65,7 @@
   color: black;
   cursor: pointer;
 }
+
+.boxInDayView {
+  position: absolute;
+}
